WIP * FocusBorder: moved to util. GuiSwingIcons can remove a dependency to the swing package. GuiSwingViewLabel.FocusBorder extends this. * GuiRepresentation: added create... factory methods   * GuiSwingMapperSEt uses those factories * GuiReprValue: added notifyUpdateWithParentSourceNone(...) and commented out System.er.println * GuiReprValueImagePane: refactored for adding reusable methods   * RenderedImageGetterSupport, RenderedImageGetterSupportForContext: getRenderedImageWithSupport, getBufferedImageWithSupport * GuiSwingPreferences   * added UpdatePrefsAction for overwriting executing prefs by newest data   * added setAs... getAs... for json methods   * make PrefsApplyOptions as a visitor for implementing new prefs GUI : WIP     * added PrefsApplyOptionsLoadingTargetType for begin,end indication     * concrete loading processes are implemented in default methods in the interface     * added load...Preferences(... options) * GuiSwingView   * added specifierManagerRoot()   * SpecifierManagerDefault.getSpecifier -> .get : SpecifierManager now extends Supplier and the default impl. of getSpecifier just calls get   * saveChildren : improve handling "Value too long" error * GuiSwingTableColumn   * SpecifierManagerIndex.getTableSpecifier -> .get * ColumnEditImagePane   * added overriding setImageWithoutContextUpdate : * GuiSwingTableModelCollection   * PreferencesForTableColumnOrderStatic, PreferencesForTableColumnWidthStatic: setJson clears modelIndexToOrder , and added a getter   * PreferencesForTableColumnOrder : added getters and setters * GuiSwingViewCollectionTable: PreferencesForTable: added getters and setters * GuiSwingViewDocumentEditor: added TextWrapTextAction.isWrapLineOffFieldParent   * added static KEY_... for json keys * GuiSwingViewImagePane: added ImagePaneBase   * change default behavior of zoom in/out : Option+Wheel (Shift+Wheel cannot work because of MacOS trackpad set the Shift flag in normal 2 finger scrolls)   * added ImagePreviewAction : optin